# gsoc_challenge

./: CMakeLists.txt  ggml_demo2.cpp  stand_alone_matmul.c  xlns16_matmul.cpp  xlns32_matmul.cpp
